--- a/LGrotte/war/WEB-INF/web.xml
+++ b/LGrotte/war/WEB-INF/web.xml
@@ -36,6 +36,16 @@
     <url-pattern>/lgrotte/report</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <servlet-name>loginServlet</servlet-name>
+    <servlet-class>de.server.login.LoginServiceImpl</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>loginServlet</servlet-name>
+    <url-pattern>/lgrotte/login</url-pattern>
+  </servlet-mapping>
+  
   
   
   
